SERVER-33553 allow legacy killCursors kill a cursor created in a session